tshell/src/main/java-generated/com/iodesystems/tshell/parser/TShellParser.java
// Generated from /home/nthalk/local/src/iodesystems/tshell/tshell/src/main/antlr4/TShellParser.g4 by ANTLR 4.13.2
package com.iodesystems.tshell.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TShellParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LET=1, FUNCTION=2, IF=3, ELSE=4, WHILE=5, FOR=6, OF=7, IN=8, RETURN=9, 
		BREAK=10, CONTINUE=11, EXPORT=12, SWITCH=13, CASE=14, DEFAULT=15, DO=16, 
		TRUE=17, FALSE=18, NULL=19, CHAIN=20, ALL=21, RACE=22, ANY=23, PIPE_RIGHT=24, 
		PIPE_SCATTER=25, PIPE_LEFT=26, PIPE=27, ARROW=28, SPREAD=29, INCREMENT=30, 
		DECREMENT=31, PLUS_ASSIGN=32, MINUS_ASSIGN=33, STAR_ASSIGN=34, SLASH_ASSIGN=35, 
		PERCENT_ASSIGN=36, PLUS=37, MINUS=38, STAR=39, REGEX=40, SLASH=41, PERCENT=42, 
		SEQ=43, SNEQ=44, EQ=45, NEQ=46, LTE=47, GTE=48, LT=49, GT=50, AND=51, 
		OR=52, NULLISH=53, NOT=54, OPTIONAL_CHAIN=55, ASSIGN=56, QUESTION=57, 
		COLON=58, DOT=59, COMMA=60, SEMI=61, LPAREN=62, RPAREN=63, LBRACKET=64, 
		RBRACKET=65, LBRACE=66, RBRACE=67, NUMBER=68, STRING=69, TEMPLATE_START=70, 
		IDENTIFIER=71, WS=72, LINE_COMMENT=73, BLOCK_COMMENT=74, TEMPLATE_TEXT=75, 
		TEMPLATE_EXPR=76, TEMPLATE_END=77;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_exportStatement = 2, RULE_letDecl = 3, 
		RULE_letBinding = 4, RULE_fnDecl = 5, RULE_returnStatement = 6, RULE_breakStatement = 7, 
		RULE_continueStatement = 8, RULE_assignStatement = 9, RULE_incrDecrStatement = 10, 
		RULE_expressionStatement = 11, RULE_assignTarget = 12, RULE_assignOp = 13, 
		RULE_ifStatement = 14, RULE_switchStatement = 15, RULE_switchCase = 16, 
		RULE_switchDefault = 17, RULE_whileStatement = 18, RULE_doWhileStatement = 19, 
		RULE_forOfStatement = 20, RULE_forStatement = 21, RULE_forInitLet = 22, 
		RULE_forInitAssign = 23, RULE_forUpdateAssign = 24, RULE_forUpdateIncrDecr = 25, 
		RULE_block = 26, RULE_blockOrStatement = 27, RULE_destructure = 28, RULE_objectDestructure = 29, 
		RULE_destructureField = 30, RULE_arrayDestructure = 31, RULE_paramList = 32, 
		RULE_param = 33, RULE_typeAnnotation = 34, RULE_expression = 35, RULE_ternaryExpr = 36, 
		RULE_nullCoalesceExpr = 37, RULE_orExpr = 38, RULE_andExpr = 39, RULE_equalityExpr = 40, 
		RULE_comparisonExpr = 41, RULE_pipeExpr = 42, RULE_additiveExpr = 43, 
		RULE_multiplicativeExpr = 44, RULE_unaryExpr = 45, RULE_postfixExpr = 46, 
		RULE_postfixOp = 47, RULE_primaryExpr = 48, RULE_arrowFunction = 49, RULE_arrayLiteral = 50, 
		RULE_objectLiteral = 51, RULE_objectField = 52, RULE_fieldName = 53, RULE_spreadOrExpr = 54, 
		RULE_templateString = 55, RULE_templatePart = 56, RULE_argumentList = 57, 
		RULE_callArg = 58;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "exportStatement", "letDecl", "letBinding", "fnDecl", 
			"returnStatement", "breakStatement", "continueStatement", "assignStatement", 
			"incrDecrStatement", "expressionStatement", "assignTarget", "assignOp", 
			"ifStatement", "switchStatement", "switchCase", "switchDefault", "whileStatement", 
			"doWhileStatement", "forOfStatement", "forStatement", "forInitLet", "forInitAssign", 
			"forUpdateAssign", "forUpdateIncrDecr", "block", "blockOrStatement", 
			"destructure", "objectDestructure", "destructureField", "arrayDestructure", 
			"paramList", "param", "typeAnnotation", "expression", "ternaryExpr", 
			"nullCoalesceExpr", "orExpr", "andExpr", "equalityExpr", "comparisonExpr", 
			"pipeExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", "postfixExpr", 
			"postfixOp", "primaryExpr", "arrowFunction", "arrayLiteral", "objectLiteral", 
			"objectField", "fieldName", "spreadOrExpr", "templateString", "templatePart", 
			"argumentList", "callArg"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'function'", "'if'", "'else'", "'while'", "'for'", "'of'", 
			"'in'", "'return'", "'break'", "'continue'", "'export'", "'switch'", 
			"'case'", "'default'", "'do'", "'true'", "'false'", "'null'", "'chain'", 
			"'all'", "'race'", "'any'", "'|>'", "'|*'", "'<|'", "'|'", "'=>'", "'...'", 
			"'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='", "'+'", "'-'", 
			"'*'", null, "'/'", "'%'", "'==='", "'!=='", "'=='", "'!='", "'<='", 
			"'>='", "'<'", "'>'", "'&&'", "'||'", "'??'", "'!'", "'?.'", "'='", "'?'", 
			"':'", "'.'", "','", "';'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			null, null, null, null, null, null, null, null, "'${'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LET", "FUNCTION", "IF", "ELSE", "WHILE", "FOR", "OF", "IN", "RETURN", 
			"BREAK", "CONTINUE", "EXPORT", "SWITCH", "CASE", "DEFAULT", "DO", "TRUE", 
			"FALSE", "NULL", "CHAIN", "ALL", "RACE", "ANY", "PIPE_RIGHT", "PIPE_SCATTER", 
			"PIPE_LEFT", "PIPE", "ARROW", "SPREAD", "INCREMENT", "DECREMENT", "PLUS_ASSIGN", 
			"MINUS_ASSIGN", "STAR_ASSIGN", "SLASH_ASSIGN", "PERCENT_ASSIGN", "PLUS", 
			"MINUS", "STAR", "REGEX", "SLASH", "PERCENT", "SEQ", "SNEQ", "EQ", "NEQ", 
			"LTE", "GTE", "LT", "GT", "AND", "OR", "NULLISH", "NOT", "OPTIONAL_CHAIN", 
			"ASSIGN", "QUESTION", "COLON", "DOT", "COMMA", "SEMI", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "NUMBER", "STRING", "TEMPLATE_START", 
			"IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "TEMPLATE_TEXT", 
			"TEMPLATE_EXPR", "TEMPLATE_END"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TShellParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TShellParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TShellParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TShellParserVisitor ) return ((TShellParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6935544800556826222L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 245L) != 0)) {
				{
				{
				setState(118);
				statement();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public LetDeclContext letDecl() {
			return getRuleContext(LetDeclContext.class,0);
		}
		public FnDeclContext fnDecl() {
			return getRuleContext(FnDeclContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public DoWhileStatementContext doWhileStatement() {
			return getRuleContext(DoWhileStatementContext.class,0);
		}
		public ForOfStatementContext forOfStatement() {
			return getRuleContext(ForOfStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ContinueStatementContext continueStatement() {
			return getRuleContext(ContinueStatementContext.class,0);
		}
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public IncrDecrStatementContext incrDecrStatement() {
			return getRuleContext(IncrDecrStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TShellParser.SEMI, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TShellParserVisitor ) return ((TShellParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				exportStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				letDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128);
				fnDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				ifStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(130);
				switchStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(131);
				whileStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(132);
				doWhileStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(133);
				forOfStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(134);
				forStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(135);
				returnStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(136);
				breakStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(137);
				continueStatement();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(138);
				assignStatement();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(139);
				incrDecrStatement();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(140);
				expressionStatement();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(141);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExportStatementContext extends ParserRuleContext {
		public TerminalNode EXPORT() { return getToken(TShellParser.EXPORT, 0); }
		public LetDeclContext letDecl() {
			return getRuleContext(LetDeclContext.class,0);
		}
		public FnDeclContext fnDecl() {
			return getRuleContext(FnDeclContext.class,0);
		}
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public ExportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).enterExportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).exitExportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TShellParserVisitor ) return ((TShellParserVisitor<? extends T>)visitor).visitExportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExportStatementContext exportStatement() throws RecognitionException {
		ExportStatementContext _localctx = new ExportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exportStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(EXPORT);
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				{
				setState(145);
				letDecl();
				}
				break;
			case FUNCTION:
				{
				setState(146);
				fnDecl();
				}
				break;
			case IDENTIFIER:
				{
				setState(147);
				assignStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LetDeclContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(TShellParser.LET, 0); }
		public List<LetBindingContext> letBinding() {
			return getRuleContexts(LetBindingContext.class);
		}
		public LetBindingContext letBinding(int i) {
			return getRuleContext(LetBindingContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TShellParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TShellParser.COMMA, i);
		}
		public TerminalNode SEMI() { return getToken(TShellParser.SEMI, 0); }
		public LetDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).enterLetDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).exitLetDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TShellParserVisitor ) return ((TShellParserVisitor<? extends T>)visitor).visitLetDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetDeclContext letDecl() throws RecognitionException {
		LetDeclContext _localctx = new LetDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_letDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(LET);
			setState(151);
			letBinding();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(152);
				match(COMMA);
				setState(153);
				letBinding();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(159);
				match(SEMI);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LetBindingContext extends ParserRuleContext {
		public DestructureContext destructure() {
			return getRuleContext(DestructureContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(TShellParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public LetBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letBinding; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).enterLetBinding(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).exitLetBinding(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TShellParserVisitor ) return ((TShellParserVisitor<? extends T>)visitor).visitLetBinding(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetBindingContext letBinding() throws RecognitionException {
		LetBindingContext _localctx = new LetBindingContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_letBinding);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			destructure();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(163);
				match(ASSIGN);
				setState(164);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FnDeclContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(TShellParser.FUNCTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TShellParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(TShellParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TShellParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode COLON() { return getToken(TShellParser.COLON, 0); }
		public TypeAnnotationContext typeAnnotation() {
			return getRuleContext(TypeAnnotationContext.class,0);
		}
		public FnDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fnDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).enterFnDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TShellParserListener ) ((TShellParserListener)listener).exitFnDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TShellParserVisitor ) return ((TShellParserVisitor<? extends T>)visitor).visitFnDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FnDeclContext fnDecl() throws RecognitionException {
		FnDeclContext _localctx = new FnDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fnDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(FUNCTION);
			setState(168);
			match(IDENTIFIER);
			setState(169);
			match(LPAREN);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPREAD || _la==IDENTIFIER) {
				{
				setState(170);
				paramList();
				}
			}

			setState(173);
			match(RPAREN);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(174);
				match(COLON);
				setState(175);
				typeAnnotation();
				}
			}

			setState(178);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
